--- a/styles.css
+++ b/styles.css
@@ -17,17 +17,18 @@ body {
 }
 
 .header {
-    padding-top: 5%;
+    padding-top: 2%;
     padding-bottom: 5%;
     display: grid;
     grid-template-columns: 2, 1, 1, 1, 2;
     grid-template-rows: 1, 1;
-    background: linear-gradient(red, orange, yellow);
+    background: linear-gradient(green,yellow,red, orange );
     width: 100%;
-    height: 100px;
+    height: fit-content;
     justify-content: center;
     justify-content: space-evenly;
-    gap: 10px;
+
+
 
 }
 
@@ -37,10 +38,23 @@ body {
     font-family: Marker Felt, fantasy;
 }
 
+.top{
+    font-family: Marker Felt, fantasy;
+    font-size: 40px;
+    z-index: 1;
+    display: grid;
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 5  ;
+
+    justify-content: center;
+    text-align: center;
+
+}
 .col1 {
 
     display: grid;
-    grid-row-start: 1;
+    grid-row-start: 2;
     grid-column-start: 2;
     grid-column-end: 3;
     justify-content: center;
@@ -49,7 +63,7 @@ body {
 .col2 {
 
     display: grid;
-    grid-row-start: 1;
+    grid-row-start: 2;
     grid-column-start: 3;
     grid-column-end: 5;
     justify-content: center;
@@ -61,7 +75,7 @@ body {
     display: grid;
     margin-left: 10px;
     margin-top: 20px;
-    grid-row-start: 1;
+    grid-row-start: 2;
     grid-column-start: 5;
     grid-column-end: 5;
     justify-content: center;
@@ -83,8 +97,8 @@ body {
 
 #addBtn {
     border-radius: 100px;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     box-shadow: 0px 0px 5px 2px ;
 }
 
@@ -127,6 +141,10 @@ h2 {
 
 }
 
+.maincol1 > h2{
+    background: linear-gradient(green, yellow);
+}
+
 .maincol2 {
     background-color: whitesmoke;
 
@@ -136,10 +154,10 @@ h2 {
     grid-column-end: 10;
     align-items: start;
     text-align: center;
+}
 
-
-
-
+.maincol2 > h2{
+    background: linear-gradient(red,orange);
 }
 
 #todoUL {
@@ -179,10 +197,13 @@ h2 {
     font-size: 15px;
     margin-top: 5px;
 }
-
+.checkedcolor{
+    background-color: grey;
+}
 .checked {
 
     text-decoration: line-through 3px black;
+
 }
 
 .timeStamp {
@@ -195,22 +216,31 @@ h2 {
 
 
 }
-.delete:hover{
-    background-color: red;
-}
 
 
-@media screen and (max-width: 1000px) {
+
+@media screen and (max-width: 600px) {
     .header{
         display: flex;
+        align-items: center;
+        text-align: center;
         flex-wrap: wrap;
-        flex-direction: row;
-        width: auto;
+        height: fit-content;
+        
 
     }
-
+    .col1{
+        width: 500px;
+    }
+    .col2{
+        width: 600px;
+    }
+    #addBtn{
+        width: 80px;
+        height: 40px;
+    }
     .container{
-        margin-top: 80px;
+
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
